tests/lean/zero_lt_zero_point_one.lean.expected.out
zero_lt_zero_point_one.lean:1:16: error: failed to synthesize type class instance for
⊢ has_div ℕ
