tests/lean/zero_lt_zero_point_one.lean
example : ¬ 0 < 0.1 := sorry